Добавляет ховер, текст на карточки

--- a/portfolio.html
+++ b/portfolio.html
@@ -84,9 +84,13 @@
                         <a href="" class="sites-link">
                             <div class="sites-tumb">
                                 <img src="./img/portfol1.jpg" alt="три фахівця по техпитанням" width="370" height="294">
-                                <p class="label">Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
-                                    відвідувачу отримати
-                                    вичерпні відомості про компанію чи приватну особу.</p>
+                                <div class="sites-overlay">
+                                    <div class="sites-label">
+                                        <p class="label"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
                             </div>
                             <div class="sites-title">
                                 <h2 class="title">Технокряк</h2>
@@ -96,7 +100,17 @@
                     </li>
                     <li class="sites-list">
                         <a href="" class="sites-link">
-                            <img src="./img/portfol2.jpg" alt="два гравця у баскетбол" width="370" height="294">
+                            <div class="sites-tumb">
+                                <img src="./img/portfol2.jpg" alt="два гравця у баскетбол" width="370" height="294">
+                                <div class="sites-overlay">
+                                    <div class="sites-label">
+                                        <p class="label"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                            дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="sites-title">
                                 <h2 class="title">Постер New Orlean vs Golden Star</h2>
                                 <p class="item">Дизайн</p>
@@ -105,7 +119,17 @@
                     </li>
                     <li class="sites-list">
                         <a href="" class="sites-link">
-                            <img src="./img/portfol3.jpg" alt="назва ресторана та риба" width="370" height="294">
+                            <div class="sites-tumb">
+                                <img src="./img/portfol3.jpg" alt="назва ресторана та риба" width="370" height="294">
+                                <div class="sites-overlay">
+                                    <div class="sites-label">
+                                        <p class="label"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                            дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="sites-title">
                                 <h2 class="title">Ресторан Seafood</h2>
                                 <p class="item">Додаток</p>
@@ -114,7 +138,17 @@
                     </li>
                     <li class="sites-list">
                         <a href="" class="sites-link">
-                            <img src="./img/portfol4.jpg" alt="навушники" width="370" height="294">
+                            <div class="sites-tumb">
+                                <img src="./img/portfol4.jpg" alt="навушники" width="370" height="294">
+                                <div class="sites-overlay">
+                                    <div class="sites-label">
+                                        <p class="label"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                            дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="sites-title">
                                 <h2 class="title">Проєкт Prime</h2>
                                 <p class="item">Маркетинг</p>
@@ -123,7 +157,17 @@
                     </li>
                     <li class="sites-list">
                         <a href="" class="sites-link">
-                            <img src="./img/portfol5.jpg" alt="дві коробки" width="370" height="294">
+                            <div class="sites-tumb">
+                                <img src="./img/portfol5.jpg" alt="дві коробки" width="370" height="294">
+                                <div class="sites-overlay">
+                                    <div class="sites-label">
+                                        <p class="label"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                            дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="sites-title">
                                 <h2 class="title">Проєкт Boxes</h2>
                                 <p class="item">Додаток</p>
@@ -132,7 +176,17 @@
                     </li>
                     <li class="sites-list">
                         <a href="" class="sites-link">
-                            <img src="./img/portfol6.jpg" alt="ноутбук, навигація по сайту натхнення без кордонів" width="370" height="294">
+                            <div class="sites-tumb">
+                                <img src="./img/portfol6.jpg" alt="ноутбук, навигація по сайту натхнення без кордонів" width="370" height="294">
+                                <div class="sites-overlay">
+                                    <div class="sites-label">
+                                        <p class="label"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                            дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="sites-title">
                                 <h2 class="title">Inspiration has no Borders</h2>
                                 <p class="item">Веб-сайт</p>
@@ -141,7 +195,17 @@
                     </li>
                     <li class="sites-list">
                         <a href="" class="sites-link">
-                            <img src="./img/portfol7.jpg" alt="книга обмеженне видання" width="370" height="294">
+                            <div class="sites-tumb">
+                                <img src="./img/portfol7.jpg" alt="книга обмеженне видання" width="370" height="294">
+                                <div class="sites-overlay">
+                                    <div class="sites-label">
+                                        <p class="label"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                            дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="sites-title">
                                 <h2 class="title">Видання Limited Edition</h2>
                                 <p class="item">Дизайн</p>
@@ -150,7 +214,17 @@
                     </li>
                     <li class="sites-list">
                         <a href="" class="sites-link">
-                            <img src="./img/portfol8.jpg" alt="біла етикета с назвою на мотузці" width="370" height="294">
+                            <div class="sites-tumb">
+                                <img src="./img/portfol8.jpg" alt="біла етикета с назвою на мотузці" width="370" height="294">
+                                <div class="sites-overlay">
+                                    <div class="sites-label">
+                                        <p class="label"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                            дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="sites-title">
                                 <h2 class="title">Проєкт LAB</h2>
                                 <p class="item">Маркетинг</p>
@@ -159,8 +233,18 @@
                     </li>
                     <li class="sites-list">
                         <a href="" class="sites-link">
-                            <img src="./img/portfol9.jpg" alt="ноутбук з відкритим додатком, де зображена людина з телефоном" width="370"
-                                height="294">
+                            <div class="sites-tumb">
+                                <img src="./img/portfol9.jpg" alt="ноутбук з відкритим додатком, де зображена людина з телефоном" width="370"
+                                    height="294">
+                                <div class="sites-overlay">
+                                    <div class="sites-label">
+                                        <p class="label"> Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це
+                                            дозволить
+                                            відвідувачу отримати
+                                            вичерпні відомості про компанію чи приватну особу.</p>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="sites-title">
                                 <h2 class="title">Growing Business</h2>
                                 <p class="item">Додаток</p>
